--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-portfolio",
+  "homepage": "https://kchua220.github.io/Portfolio-Website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,14 +8,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deply": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.1.0",
     "react-odometerjs": "^3.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.6.1",
     "swiper": "^11.1.1"
