--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://kchua220.github.io/Portfolio-Website/",
+  "homepage": "https://github.com/kchua220/Portfolio-Website.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
