--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.1.0",
+    "react-icons": "^5.5.0",
     "react-odometerjs": "^3.1.3",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.6.1",
